--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
     --text-color: #FAFAFF;
     --bg-primary-button: #312a2c;
     --color-bg-popup: #312B2D;
+    --border-primary: #7C686D;
 
     --red: #FFA07A;
     --blue: #ADD8E6;
@@ -119,7 +120,7 @@ main {
 }
 
 #separator{
-    border: 1px solid #7C686D;
+    border: 1px solid var(--border-primary);
 }
 
 /* Colors container */
@@ -129,7 +130,7 @@ main {
     justify-content: space-around;
     align-items: center;
     height: 64px;
-    border: 3px solid #7C686D;
+    border: 3px solid var(--border-primary);
     border-radius: 50px;
     padding: 24px;
 }
@@ -147,7 +148,7 @@ main {
 }
 
 .selected{
-    border: 3px solid #7C686D;
+    border: 3px solid var(--border-primary);
 }
 
 #red {
@@ -223,6 +224,23 @@ main {
 
 #btn-rules-close{
     display: block;
+}
+
+/* feedback */
+
+.feedback-link{
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 28px;
+    color: var(--bg-primary-button);
+    border: 1px solid var(--bg-primary-button);
+    position: absolute;
+    bottom: 16px;
+    right: 16px;
 }
 
 /* media */
